Fix filter gap on analytics select controls (https://github.com/woocommerce/woocommerce-admin/pull/3259)

--- a/plugins/woocommerce-admin/packages/components/src/advanced-filters/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/advanced-filters/style.scss
@@ -13,7 +13,7 @@
 
 	.components-select-control__input {
 		height: 38px;
-		padding: 0;
+		padding: 0 0 0 $gap-smaller;
 		margin: 0;
 	}
 
